# TIC-thermal-imaging-camera

./: README.md  install-arm-hisiv300-linux-uclibcgnueabi-2.9.sh  install-arm-linux-gnueabihf-2.9.sh  install-x86_64-linux-gnu-2.9.sh
SDK/: seekware.h
SDK v2.3.0 180517/SampleApp/SampleViewer/: Program.cs  SeekwareDevice.cs
SDK v2.3.0 180517/SampleApp/SampleViewer/Properties/: Resources.resx
SDK/SDK v2.3.0 180517/: SeekWare_public.h
SDK/SDK v2.3.0 180517/SampleApp/SampleViewer/: Form1.resx
SDK/SDK v2.3.0 180517/SampleApp/SampleViewer/Properties/: Resources.Designer.cs  Settings.Designer.cs
SDK/SDK v2.3.0 180517/lib/x64/: SeekWare.lib
SDK/SDK v2.3.0 180517/lib/x86/: SeekWare.lib
SDK/SDK_v2.3.0/: SDK v2.3.0 180517.html
SDK/SDK_v2.3.0/Driver_3.0.0.1/: SeekWare.inf  seekware.cat  sign.bat
SDK/SDK_v2.3.0/SampleApp/: SampleViewer.sln
SDK/SDK_v2.3.0/SampleApp/SampleViewer/: Form1.Designer.cs  Form1.cs  Readme.txt  SampleViewer.csproj
SDK/SDK_v2.3.0/SampleApp/SampleViewer/Properties/: AssemblyInfo.cs
SDK/SDK_v2.9/: Seekware-SDK-2.9.html
SDK/SDK_v3.4/: SeekWare Maker SDK_User Guide_20160809.html
example/seekware-stream/: Makefile
example/seekware-stream-v3/: CMakeLists.txt  Makefile  streaming.sh
example/seekware-stream-v3/src/: seekware-stream.c
example/seekware-stream-v4/: Makefile  myMonitor.sh  streaming.sh
example/seekware-stream-v4/raspicam/: raspistill  raspivid
example/seekware-stream-v4/src/: seekware-sharedMemory.h  seekware-stream.c  seekware-tcpip.c
example/seekware-stream/imagej_luts/: 005-random.lut  iman.lut  mixed.lut
example/seekware-stream/include/: colour.h
example/seekware-stream/src/: colour.c  seekware-stream.c
example/seekware-stream_v2/: CMakeLists.txt  Makefile
example/seekware-stream_v2/src/: seekware-sdl.c
linux_Seekware-SDK-2.9/: install-arm-rkcvr-linux-uclibcgnueabihf-2.9.sh  install-i686-linux-gnu-2.9.sh
